welcome.lessons.welcome.array.array667.Array667.scala.error
array667:4: error: type mismatch;
 found   : Unit
 required: Boolean
		if (nums(i)=6){
                           ^array667:5: error: value || is not a member of Int
			if (nums(i+1)=6 || nums(i+1)=7){	
                                        ^array667:3: error: type mismatch;
 found   : Unit
 required: Int
	for (i<- 0 to nums.length-2){
              ^